Fix the hidden content on small screen

--- a/css/small.css
+++ b/css/small.css
@@ -3,11 +3,15 @@ img {
 }
 
 .flex-item  p {
-    display: none;
+    display: block;
+    font-size: 1em;
 }
 
+
 .head-flex img {
-    display: none;   
+    width: 50%;
+    height: 50%; 
+    flex-grow: 1;
 }
 
 .flex-item {
